--- a/documentation.html
+++ b/documentation.html
@@ -55,6 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
 
             </ul>
 
@@ -188,7 +191,9 @@
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
-
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
 
             </ul>
           </div>
