--- a/visualizations.html
+++ b/visualizations.html
@@ -94,6 +94,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
 
               <li class="nav-item">
                 <a class="nav-link" href="login.html"></a>
@@ -200,6 +203,9 @@
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
               </li>
 
 
