--- a/visualizations.html
+++ b/visualizations.html
@@ -112,11 +112,6 @@
 
   <!-- event section -->
   <section class="viz">
-    <div class="heading_container ">
-      <h3 class="viztitle">
-        Visualizations
-      </h3>
-    </div>
     <div class="container-fluid">
       <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-3 col m-0">
@@ -157,6 +152,11 @@
           </div>
         </div>
       <div class="col-lg-9 col-md-9 col-sm-9 col m-0">
+        <div class="heading_container m-0">
+          <h3 class="viztitle">
+            Visualizations
+          </h3>
+        </div>
         <div id="mapchartdropdowns">
         </div>
         </div>
