--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       <br>
                       <br>
                       <br>
-                      <a href="#down"><span></span>Scroll down</a>
+                      <a href="#down"><span></span>Explore the project</a>
                     </div>
                   </div>
                 </div>
@@ -100,13 +100,14 @@
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div>
-                      <h1>
+                    <div >
+                      <h1 style="position: relative; top: 50px;">
                         N U T R I T I O N
                       </h1>
-                      <a href="">
-                        Read More
-                      </a>
+                      <br>
+                      <br>
+                      <br>
+                      <a href="visualizations.html"><span></span>Explore the visualizations</a>
                     </div>
                   </div>
                 </div>
@@ -118,13 +119,14 @@
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
-                    <div>
-                      <h1>
+                    <div >
+                      <h1 style="position: relative; top: 50px;">
                         N U T R I T I O N
                       </h1>
-                      <a href="">
-                        Read More
-                      </a>
+                      <br>
+                      <br>
+                      <br>
+                      <a href="catalogue.html"><span></span>Explore the data</a>
                     </div>
                   </div>
                 </div>
@@ -200,11 +202,12 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img  src="images/a-1.jpg" alt="" />
+              <img  src="images/arido.jpg" alt="" />
             </div>
             <div class="img-box b2">
-              <img src="images/a-2.jpg" alt="" />
+              <img src="images/agriculutral.jpg" alt="" />
             </div>
+            
           </div>
         </div>
         <div class="col-md-6">
@@ -230,13 +233,13 @@
 
   <!-- end about section -->
 
-  <!-- course section -->
+  <!-- course section
 
   <section class="course_section layout_padding-bottom">
     <div class="side_img">
       <img src="images/side-img.png" alt="" />
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="heading_container">
         <h3>
           VISUALIZATIONS
@@ -250,8 +253,8 @@
           <div class="box">
             <img src="images/lemon-chart.jpg" alt="" />
 
-            <h5>
-              Visualizations
+            <h5 >
+              Click to explore the data through our visualizations
 
             </h5>
           </div>
@@ -268,7 +271,7 @@
     </div>
   </section>
 
-  <!-- end course section -->
+nd course section -->
 
   <!-- login section -->
 
@@ -325,7 +328,7 @@
       <div class="event_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/event-img.jpg" alt="" />
+            <img src="images/event-img.jpg" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -335,18 +338,10 @@
               <p style="margin: 1%;">descrizioncina</p>
             </h6>
           </div>
-          <!--<div class="date-box">
-            <h3>
-              <span>
-                15
-              </span>
-              March
-            </h3>
-          </div> -->
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/event-img.jpg" alt="" />
+            <img src="images/event-img.jpg" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -359,7 +354,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/ariele-santello.jpg" alt="" />
+            <img src="images/ariele-santello.jpg" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -375,7 +370,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/giulia_massimino.png" alt="" />
+            <img src="images/giulia_massimino.png" style="width: 50%;" alt="" />
           </div>
           <div class="detail-box">
             <h4>
@@ -393,93 +388,6 @@
     </div>
   </section>
 
-  <!-- end event section -->
-
-  <!-- client section -->
-
-  <!-- <section class="client_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container">
-        <h3>
-          What People Say
-        </h3>
-        <p>
-          It is a long established fact that a reader will be distracted
-        </p>
-      </div>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/client.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Distracted by
-                </h5>
-                <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/client.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Distracted by
-                </h5>
-                <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/client.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Distracted by
-                </h5>
-                <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="btn-box">
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- end client section -->
-
-  <!-- contact section -->
-
   <section class="contact_section  layout_padding">
     <div class="container">
       <div class="row">
@@ -494,33 +402,6 @@
                 by the readable
               </p>
             </div> -->
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="info_menu">
-            <h5 style="color: #ffffff; font-weight: 600;">
-              QUICK LINKS
-            </h5>
-            <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a style="color: #ffffff;" class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="documentation.html"> Documentation </a>
-              </li>
-              <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="metadata.html"> Metadata  </a>
-              </li>
-              <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
-              </li>
-              <li class="nav-item">
-                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
-              </li>
-
-
-            </ul>
           </div>
         </div>
         <div class="col-md-3">
