--- a/metadata.html
+++ b/metadata.html
@@ -80,7 +80,7 @@
       <div class="row">
 
 
-        <div class="col-sm-3 col-md-3 col-lg-3 col">
+        <div class="col-sm-4 col-md-4 col-lg-4 col">
           <div class="index-ul">
             <ul class="no-bullets">
               <li>Datasets: </li>
@@ -94,7 +94,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-9 col-md-9 col-lg-9 col">
+        <div class="col-sm-8 col-md-8 col-lg-8 col">
 
           <div class="row">
             <div class="heading_container ml-5 mr-5">
@@ -102,7 +102,7 @@
                 DATASETS METADATA SECTION
               </h3>
             </div>
-            <div class="col-sm-9 col-md-9 col-lg-9 col">
+            <div class="col">
               <div class="card-deck">
                 <div id="nutridef" class="metadata-content card">
                   <div class="card-body">
