--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img  src="images/arido.jpg" alt="" />
+              <img  src="images/a-1.jpg" alt="" />
             </div>
             <div class="img-box b2">
-              <img src="images/agriculutral.jpg" alt="" />
+              <img src="images/a-2.jpg" alt="" />
             </div>
             
           </div>
