messe prime descrizioni dataset

--- a/documentation.html
+++ b/documentation.html
@@ -143,7 +143,58 @@
                                        <li>Cardiovascular diseases</li>
 
                                    </ul>
+                    <h4>BIBLIOGRAPHY</h4>
+                    <ul>
+                       <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child</li>
+                       <li>https://www.uofmhealth.org/health-library/ug2061</li>
+                       <li>https://www.healthlinkbc.ca/health-topics/ug2061 </li>
+                       <li>https://www.rch.org.au/kidsinfo/fact_sheets/Nutrition_older_children/ </li>
+                       <li>https://www.who.int/news-room/fact-sheets/detail/malnutrition </li>
+                       <li>https://www.unicef.org.uk/press-releases/poor-diets-damaging-childrens-health-warns-unicef/ </li>
+                       <li>http://www.urbanchildinstitute.org/articles/updates/nutrition-and-early-brain-development</li>
+                       <li>https://www.child-encyclopedia.com/child-nutrition/according-experts/feeding-behaviour-infants-and-young-children-and-its-impact-child</li>
+                   </ul>
+                   <h4>General Analysis</h4>
+                      <p>To see the entire explanatory table about the general analysis click here.</p>
 
+                    <h4>Quality analysis</h4>
+                    <p>we used different datasets from different sources to fully cover the several aspects that malnutrition among children implies:</p>
+
+                    <h5 style="color: #20c997;">World Bank Group:</h5>
+                      <p>The World Bank strives to enhance public access to and use of data that it collects and publishes. The accurate and reliable data came from recognized international sources and are organized in datasets listed in The World Bank Data Catalog (the “Datasets”).
+                        The Datasets are collections of data, managed by The World Bank and provided in different machine-readable formats. They can be downloaded and reused.
+                        Data are fully described, and a large list of indicators and their description is provided. It is possible to search for relevant data using keywords such as indicators country names etc.
+                        Metadata and resources for each dataset can be found on its dataset page. For some tabular resources, an API is also provided, allowing programmatic access to the underlying data.</p>
+                    <h5 style="color: #20c997;">IHME:</h5>
+                      <p>IHME states to provide datasets that are relevant and scientifically valid evidence to improve health policy and practice, guaranteeing that datasets are unimpeded by political, financial, or other types of interference.
+                        Their data, collected worldwide, are the result of rigorous measurements and adhere to the principles of scientific inquiry.
+                        They try to use data as recent as possible and they make them open, transparent, and accessible to a wide as possible audience. All global, regional, and national datasets are freely available and downloadable.</p>
+                    <h5 style="color: #20c997;">World Health Organization:</h5>
+                      <p>for what concerns the overview of the dataset, the data are fully described and there are a large number of indicators to choose among, moreover, each dataset is accompanied by its corresponding metadata.
+                        Data are accurate and reliable since they come from population-based sources (household surveys, civil registration systems of vital events) and institution-based sources (administrative and operational activities of institutions, such as health facilities). ù
+                        Availability and quality of data are guaranteed.</p>
+                    <h5 style="color: #20c997;">UNICEF</h5>
+                      <p>UNICEF’s Data & Analytics (D&A) team is the global go-to for data on children.
+                        It leads the collection, validation, analysis, use, and communication of the most statistically sound, internationally comparable data on the situation of children and women around the world.
+                        D&A upholds the quality, integrity, and organization of these data and makes them accessible as a global public good on the data.unicef.org website.
+                        The platform gives the possibility to query and download your own datasets through the selection of indicators, filters, and visualization models.
+                        A list of all indicators is provided and organized by the thematic sector.
+                        The datasets obtained by download are free to reuse.</p>
+
+                    <h5 style="color: #20c997;">FAO:</h5>
+                      <p>FAO makes a significant contribution to global discussion related to food and agricultural statistics through its participation in international and regional statistical fora.
+                        Their statistics data tackle issues related to food and agriculture, but also hunger, malnutrition and rural poverty. The Organization adopts Corporate Statistical Standards that set out the principles and recommended best practices to ensure that FAO statistical production processes and statistical outputs are of the highest possible quality.
+                        In 2014 it was also adopted the Statistics Quality Assurance Framework(SQAF) based on the Fundamental Prinicples of Official Statistics and the Principles Governing International Statistical Activities (CCSA), which guide other national and international organizations, like Eurostat.
+                        Staticians adopt high-standard professional values and ethics in statistics.</p>
+                    <h5 style="color: #20c997;">Our World in Data:</h5>
+                      <p>Our world in data is an Open Access and Open source resource.
+                        The goal of the project is to make the knowledge on the big problems accessible and understandable. As stated on their homepage, Our World in Data is about Research and data to make progress against the world’s largest problems.
+                        They have a major interest in: poverty, disease, hunger, climate change, war, existential risks, and inequality.
+                        It collects research articles and visualizations licensed under CC BY, data is available for download. Furthermore, all code they write is open-sourced under the MIT license and can be found on GitHub.</p>
+                    <h5 style="color: #20c997;">UN IGME:</h5>
+                    <p>The United Nations Inter-agency Group for Child Mortality Estimation (UN IGME) was formed in 2004 to share data on child mortality, improve methods for child mortality estimation, report on progress towards child survival goals, and enhance country capacity to produce timely and properly assessed estimates of child mortality.
+                      UN IGME’s independent Technical Advisory Group (TAG), comprised of leading academic scholars and independent experts in demography and biostatistics, provides guidance on estimation methods, technical issues, and strategies for data analysis and data quality assessment.
+                      UN IGME updates its child mortality estimates annually after reviewing newly available data and assessing data quality. The web portal contains the latest UN IGME estimates of child mortality at the country, regional and global levels, and the data used to derive them.</p>
 
             </div>
           </div>
